--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "steevenz/rajaongkir",
+  "name": "dandyarir/rajaongkir",
   "description": "Advanced RajaOngkir API PHP Class",
   "license": "MIT",
   "type": "php-class",
