--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     "wiki": "https://github.com/steevenz/rajaongkir/wiki"
   },
   "require": {
-    "php": ">=7.1.0",
+    "php": "^7.1.0",
     "o2system/curl": "*"
   },
   "autoload": {
